<?xml version="1.0"?>
<package format="2">
  <name>ros_brave_face</name>
  <version>1.0.0</version>
  <description>The ros_brave_face package</description>

  <maintainer email="hirokazu@dream-drive.net">hirokazu onomichi</maintainer>
  <license>MIT</license>
  <url type="website">https://y-giken.xrea.jp/</url>
  <author email="hirokazu@dream-drive.net">hirokazu onomichi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
